sidebar: don't margins in the code

those should rather be defined by the theme
https://bugzilla.gnome.org/show_bug.cgi?id=763768